# vk_face_recognition_bot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: auth.py  loop.py
face_finder/: finder.py
